# libfacedetection.train

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-pose.txt  requirements-tflite.txt  requirements.txt
script/: build_image.sh  sbatch.sh
tests/: conftest.py  test_coco_json_pose_dataset.py  test_compare_inference_cli.py  test_data_transforms.py  test_eval_pose_cli.py  test_export_cli.py  test_export_pose_cli.py  test_export_tflite_cli.py  test_labelv2_parser.py  test_legacy_checkpoint_load.py  test_legacy_widerface_eval.py  test_lr_scheduler.py  test_pose_coco_eval.py  test_pose_codec.py  test_pose_dataset.py  test_pose_losses.py  test_pose_model.py  test_pose_overfit_check.py  test_pose_postprocess.py  test_pose_transforms.py  test_pose_visualize.py  test_postprocess.py  test_train_cli.py  test_train_one_epoch.py  test_train_pose_cli.py  test_training_geometry.py  test_visualize_augmentations.py  test_widerface_evaluation.py  test_yunet_criterion.py  test_yunet_forward_shapes.py
yunet_train/: __init__.py
yunet_train/cli/: __init__.py  compare_inference.py  eval_pose.py  eval_pose_coco.py  eval_widerface.py  export_cpp.py  export_onnx.py  export_pose_onnx.py  export_tflite.py  train.py  train_pose.py
yunet_train/engine/: __init__.py  assigners.py  checkpoint.py  codec.py  loop.py  losses.py  nms.py  onnx_export.py  priors.py  scheduler.py
yunet_train/models/: __init__.py  backbone.py  config.py  init.py  layers.py  neck.py
yunet_train/tasks/: __init__.py
yunet_train/tasks/face/: __init__.py  codec.py  collate.py  config.py  criterion.py  dataset.py  evaluation.py  head.py  model.py  paths.py  postprocess.py  trainer.py  transforms.py  types.py  widerface.py
yunet_train/tasks/pose/: __init__.py  coco_eval.py  coco_json_dataset.py  codec.py  collate.py  config.py  criterion.py  dataset.py  losses.py  model.py  paths.py  postprocess.py  trainer.py  transforms.py  types.py  visualize.py
yunet_train/tools/: __init__.py  check_env.py  check_pose_overfit.py  check_widerface.py  compare_forward.py  visualize_augmentations.py  visualize_pose_dataset.py  visualize_pose_image.py
